update pay